hphp/test/slow/constant/globals-array-constant.php.expectf
Fatal error: `$GLOBALS` variable is removed from the language. Use HH\global functions in %s/test/slow/constant/globals-array-constant.php on line 4